--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -97,7 +97,7 @@
               "@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": ["node_modules/chart.js/dist/chart.js"]
           }
         }
       }
